ui_tests/fn_calls_8.stderr
error: mismatched types: a:Awk[] b:Blah[]
  ┌─ main.box:9:15
  │
9 │     foo[Blah](new Awk {});
  │               ^^^^^^^^^^

