ui_tests/fn_calls_8.box
fn foo[T](a: T) -> T {
    a
}

type Blah {}
type Awk {}

fn bar() {
    foo[Blah](new Awk {});
}